--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ branches:
     - master
 env:
   - PUPPET_VERSION="3.1"
-  - PUPPET_VERSION="2.7"
   - PUPPET_VERSION="3.2.2"
-script: "bundle exec rake SPEC_OPTS='--format documentation'"
+script: "bundle exec rake spec SPEC_OPTS='--format documentation'"
+
+bundler_args: ""
